--- a/index.html
+++ b/index.html
@@ -4,59 +4,98 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.5/dist/umd/supabase.min.js"></script>
-  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <style>
     body {
       background-color: #f8f9fa;
-      padding: 2rem;
+      font-family: Arial, sans-serif;
     }
+
+    .booking-form {
+      max-width: 500px;
+      margin: 50px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+
+    .form-control {
+      background-color: #e9f0ff;
+    }
+
+    .btn-primary {
+      background-color: #006aff;
+      border: none;
+    }
+
+    .btn-primary:hover {
+      background-color: #0051c9;
+    }
+
     .logo {
-      max-width: 250px;
+      max-height: 80px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+    }
+
+    .unit-dropdown {
+      position: relative;
+      text-align: left;
       margin-bottom: 1rem;
+    }
+
+    .unit-option {
+      padding: 10px;
+      cursor: pointer;
+    }
+
+    .unit-list {
+      position: absolute;
+      width: 100%;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      max-height: 200px;
+      overflow-y: auto;
+      z-index: 10;
+      display: none;
+    }
+
+    .unit-dropdown.open .unit-list {
+      display: block;
+    }
+
+    #unitDisplay {
+      background-color: #e9f0ff;
+      padding: 10px;
+      border-radius: 8px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="text-center">
-      <img src="https://i.ibb.co/zrmz7tk/Untitled-design-3.png" alt="Logo" class="logo"/>
-      <h2 class="mb-4">Book Your Slide</h2>
-    </div>
+  <div class="booking-form text-center">
+    <img src="https://i.ibb.co/zrmz7tk/Untitled-design-3.png" alt="Slide Guys Logo" class="logo">
+    <h2 class="mb-3">Slide Guys Booking</h2>
+    <p>Select a unit and the date you would like to reserve.<br>No cancellations. Rescheduling is subject to availability.<br>
+      A $50 deposit per unit is due at time of reservation. A team member will contact you shortly after reservation confirmation.</p>
 
     <form id="bookingForm">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input class="form-control" type="text" id="name" required>
-      </div>
-      <div class="form-group">
-        <label for="phone">Phone</label>
-        <input class="form-control" type="tel" id="phone" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input class="form-control" type="email" id="email" required>
-      </div>
-      <div class="form-group">
-        <label for="address">Address</label>
-        <input class="form-control" type="text" id="address" required>
-      </div>
-      <div class="form-group">
-        <label>Choose a Unit</label>
-        <div class="dropdown">
-          <button class="btn btn-outline-primary dropdown-toggle w-100" type="button" id="unitDisplay" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Select a unit
-          </button>
-          <div class="dropdown-menu w-100" id="unitDropdown"></div>
-        </div>
-        <input type="hidden" id="unit" required>
-      </div>
-      <div class="form-group">
-        <label for="date">Choose a Date</label>
-        <input class="form-control" type="date" id="date" required>
-      </div>
+      <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
+      <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
+      <input type="email" id="email" class="form-control mb-2" placeholder="Email Address" required />
+      <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
 
+      <div class="unit-dropdown" id="unitDropdown">
+        <div id="unitDisplay">Select a unit</div>
+        <div class="unit-list" id="unitList"></div>
+      </div>
+      <input type="hidden" id="unit" required />
+
+      <input type="date" id="date" class="form-control mb-3" required />
       <button type="button" id="addToCart" class="btn btn-secondary w-100 mb-3">Add to Cart</button>
     </form>
 
@@ -65,122 +104,136 @@
       <ul id="cartList" class="list-group mb-3"></ul>
       <button id="submitCart" class="btn btn-primary w-100" style="display:none;">Confirm Reservation</button>
     </div>
+
+    <div id="successMessage" class="mt-3 text-success" style="display:none;">Booking successful!</div>
+    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">Some units were unavailable.</div>
   </div>
 
   <script>
     const supabase = supabase.createClient(
       'https://vaobmohukgcqfvnclqyh.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M
-'
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M'
     );
 
     emailjs.init("PXm_wNk9aIao8Hlpp");
 
-    document.addEventListener('DOMContentLoaded', async () => {
+    const cart = [];
+    const unitDisplay = document.getElementById('unitDisplay');
+    const unitList = document.getElementById('unitList');
+    const unitDropdown = document.getElementById('unitDropdown');
+    const cartList = document.getElementById('cartList');
+    const submitCartBtn = document.getElementById('submitCart');
+
+    unitDisplay.addEventListener('click', () => {
+      unitDropdown.classList.toggle('open');
+    });
+
+    document.addEventListener('click', (e) => {
+      if (!unitDropdown.contains(e.target)) unitDropdown.classList.remove('open');
+    });
+
+    async function loadUnits() {
       const { data: units } = await supabase.from('units').select('*');
-      const unitDropdown = document.getElementById('unitDropdown');
-
       units.forEach(unit => {
-        const btn = document.createElement('button');
-        btn.className = 'dropdown-item';
-        btn.type = 'button';
-        btn.textContent = unit.name;
-        btn.onclick = () => {
-          document.getElementById('unitDisplay').textContent = unit.name;
+        const div = document.createElement('div');
+        div.className = 'unit-option';
+        div.textContent = unit.name;
+        div.onclick = () => {
+          unitDisplay.textContent = unit.name;
           document.getElementById('unit').value = unit.name;
+          unitDropdown.classList.remove('open');
         };
-        unitDropdown.appendChild(btn);
+        unitList.appendChild(div);
       });
+    }
 
-      const cart = [];
-      const cartList = document.getElementById('cartList');
-      const submitCartBtn = document.getElementById('submitCart');
+    loadUnits();
 
-      document.getElementById('addToCart').addEventListener('click', async () => {
-        const unitName = document.getElementById('unit').value;
-        const date = document.getElementById('date').value;
-        if (!unitName || !date) return alert('Please select both a unit and a date.');
+    document.getElementById('addToCart').addEventListener('click', () => {
+      const unitName = document.getElementById('unit').value;
+      const date = document.getElementById('date').value;
+      if (!unitName || !date) return alert('Please select both a unit and a date.');
 
-        if (cart.some(item => item.unit === unitName && item.date === date)) {
-          alert('This unit and date are already in your cart.');
-          return;
+      if (cart.some(item => item.unit === unitName && item.date === date)) {
+        alert('This unit and date are already in your cart.');
+        return;
+      }
+
+      cart.push({ unit: unitName, date });
+
+      const li = document.createElement('li');
+      li.className = 'list-group-item d-flex justify-content-between align-items-center';
+      li.textContent = `${unitName} on ${date}`;
+      const removeBtn = document.createElement('button');
+      removeBtn.className = 'btn btn-sm btn-danger';
+      removeBtn.textContent = 'Remove';
+      removeBtn.onclick = () => {
+        cart.splice(cart.indexOf(cart.find(i => i.unit === unitName && i.date === date)), 1);
+        cartList.removeChild(li);
+        if (cart.length === 0) submitCartBtn.style.display = 'none';
+      };
+      li.appendChild(removeBtn);
+      cartList.appendChild(li);
+      submitCartBtn.style.display = 'block';
+
+      unitDisplay.textContent = 'Select a unit';
+      document.getElementById('unit').value = '';
+      document.getElementById('date').value = '';
+    });
+
+    submitCartBtn.addEventListener('click', async () => {
+      const name = document.getElementById('name').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const address = document.getElementById('address').value.trim();
+
+      if (!name || !phone || !email || !address) {
+        alert('Please fill out your contact info before submitting.');
+        return;
+      }
+
+      let errors = false;
+
+      for (const item of cart) {
+        const { data: unitData } = await supabase
+          .from('units')
+          .select('id')
+          .eq('name', item.unit)
+          .single();
+
+        if (!unitData) {
+          alert(`Unit not found: ${item.unit}`);
+          errors = true;
+          continue;
         }
 
-        cart.push({ unit: unitName, date });
+        const unitId = unitData.id;
+        const { data: existing } = await supabase
+          .from('bookings')
+          .select('*')
+          .eq('unit', unitId)
+          .eq('date', item.date);
 
-        const li = document.createElement('li');
-        li.className = 'list-group-item d-flex justify-content-between align-items-center';
-        li.textContent = `${unitName} on ${date}`;
-        const removeBtn = document.createElement('button');
-        removeBtn.className = 'btn btn-sm btn-danger';
-        removeBtn.textContent = 'Remove';
-        removeBtn.onclick = () => {
-          cart.splice(cart.indexOf(cart.find(i => i.unit === unitName && i.date === date)), 1);
-          cartList.removeChild(li);
-          if (cart.length === 0) submitCartBtn.style.display = 'none';
-        };
-        li.appendChild(removeBtn);
-        cartList.appendChild(li);
-        submitCartBtn.style.display = 'block';
-
-        document.getElementById('unitDisplay').textContent = 'Select a unit';
-        document.getElementById('unit').value = '';
-        document.getElementById('date').value = '';
-      });
-
-      submitCartBtn.addEventListener('click', async () => {
-        const name = document.getElementById('name').value.trim();
-        const phone = document.getElementById('phone').value.trim();
-        const email = document.getElementById('email').value.trim();
-        const address = document.getElementById('address').value.trim();
-
-        if (!name || !phone || !email || !address) {
-          alert('Please fill out your contact info before submitting.');
-          return;
+        if (existing && existing.length > 0) {
+          errors = true;
+          continue;
         }
 
-        for (const item of cart) {
-          const { data: unitData } = await supabase
-            .from('units')
-            .select('id')
-            .eq('name', item.unit)
-            .single();
+        await supabase.from('bookings').insert([
+          { name, phone, email, address, unit: unitId, date: item.date }
+        ]);
 
-          if (!unitData) {
-            alert(`Unit not found: ${item.unit}`);
-            continue;
-          }
+        const params = { name, phone, email, address, unit: item.unit, date: item.date };
+        emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
+        emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
+      }
 
-          const unitId = unitData.id;
-          const { data: existing } = await supabase
-            .from('bookings')
-            .select('*')
-            .eq('unit', unitId)
-            .eq('date', item.date);
-
-          if (existing && existing.length > 0) {
-            alert(`Sorry, ${item.unit} is already booked on ${item.date}. Skipping.`);
-            continue;
-          }
-
-          await supabase.from('bookings').insert([
-            { name, phone, email, address, unit: unitId, date: item.date }
-          ]);
-
-          const params = { name, phone, email, address, unit: item.unit, date: item.date };
-          emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
-          emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
-        }
-
-        alert('All available bookings submitted!');
-        cart.length = 0;
-        cartList.innerHTML = '';
-        submitCartBtn.style.display = 'none';
-        document.getElementById('bookingForm').reset();
-      });
+      document.getElementById(errors ? 'errorMessage' : 'successMessage').style.display = 'block';
+      cart.length = 0;
+      cartList.innerHTML = '';
+      submitCartBtn.style.display = 'none';
+      document.getElementById('bookingForm').reset();
     });
   </script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
