--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.5/dist/umd/supabase.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <style>
     body {
       background-color: #f8f9fa;
@@ -48,8 +46,17 @@
     }
 
     .unit-option {
+      display: flex;
+      align-items: center;
       padding: 10px;
       cursor: pointer;
+    }
+
+    .unit-option img {
+      height: 40px;
+      width: 40px;
+      border-radius: 8px;
+      margin-right: 10px;
     }
 
     .unit-list {
@@ -78,11 +85,10 @@
 </head>
 <body>
   <div class="booking-form text-center">
-    <img src="https://i.ibb.co/zrmz7tk/Untitled-design-3.png" alt="Slide Guys Logo" class="logo">
+    <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
     <h2 class="mb-3">Slide Guys Booking</h2>
-    <p>Select a unit and the date you would like to reserve.<br>No cancellations. Rescheduling is subject to availability.<br>
-      A $50 deposit per unit is due at time of reservation. A team member will contact you shortly after reservation confirmation.</p>
-
+    <p>Select a unit and the date you would like to reserve.<br> No cancellations.<br>Rescheduling is subject to availability.<br>A $50 deposit per unit is due at time of reservation. A team member will contact you shortly after reservation confirmation. We accept cash, check, venmo, cash app, and pay-pal.</p>
+    
     <form id="bookingForm">
       <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
       <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
@@ -96,143 +102,156 @@
       <input type="hidden" id="unit" required />
 
       <input type="date" id="date" class="form-control mb-3" required />
-      <button type="button" id="addToCart" class="btn btn-secondary w-100 mb-3">Add to Cart</button>
+      <button type="submit" class="btn btn-primary w-100">Reserve</button>
     </form>
 
-    <div id="cartContainer" class="text-start mt-4">
-      <h5>Booking Cart</h5>
-      <ul id="cartList" class="list-group mb-3"></ul>
-      <button id="submitCart" class="btn btn-primary w-100" style="display:none;">Confirm Reservation</button>
+    <div id="successMessage" class="mt-3 text-success" style="display:none;">
+      Booking successful!
     </div>
-
-    <div id="successMessage" class="mt-3 text-success" style="display:none;">Booking successful!</div>
-    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">Some units were unavailable.</div>
+    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
+      That unit is already booked on this date.
+    </div>
   </div>
 
+  <!-- Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
-    const supabase = supabase.createClient(
-      'https://vaobmohukgcqfvnclqyh.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M'
-    );
+    (function () {
+      emailjs.init("PXm_wNk9aIao8Hlpp");
+    })();
+  </script>
 
-    emailjs.init("PXm_wNk9aIao8Hlpp");
+  <script>
+    document.addEventListener('DOMContentLoaded', async () => {
+      const today = new Date();
+      const currentYear = today.getFullYear();
+      const allowedStart = new Date(`${currentYear}-01-01`);
+      const allowedEnd = new Date(`${currentYear}-12-31`);
+      const dateInput = document.getElementById('date');
 
-    const cart = [];
-    const unitDisplay = document.getElementById('unitDisplay');
-    const unitList = document.getElementById('unitList');
-    const unitDropdown = document.getElementById('unitDropdown');
-    const cartList = document.getElementById('cartList');
-    const submitCartBtn = document.getElementById('submitCart');
+      // Set min date to today or Jan 1st of current year, whichever is later
+      const minDate = today > allowedStart ? today : allowedStart;
+      dateInput.setAttribute('min', minDate.toISOString().split('T')[0]);
+      dateInput.setAttribute('max', allowedEnd.toISOString().split('T')[0]);
 
-    unitDisplay.addEventListener('click', () => {
-      unitDropdown.classList.toggle('open');
-    });
-
-    document.addEventListener('click', (e) => {
-      if (!unitDropdown.contains(e.target)) unitDropdown.classList.remove('open');
-    });
-
-    async function loadUnits() {
-      const { data: units } = await supabase.from('units').select('*');
-      units.forEach(unit => {
-        const div = document.createElement('div');
-        div.className = 'unit-option';
-        div.textContent = unit.name;
-        div.onclick = () => {
-          unitDisplay.textContent = unit.name;
-          document.getElementById('unit').value = unit.name;
-          unitDropdown.classList.remove('open');
-        };
-        unitList.appendChild(div);
+      // Prevent next year selection
+      dateInput.addEventListener('change', () => {
+        const selected = new Date(dateInput.value);
+        if (selected.getFullYear() !== currentYear) {
+          alert("You may only book dates within this year. Bookings for next year open January 1st.");
+          dateInput.value = '';
+        }
       });
-    }
 
-    loadUnits();
+      const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
+      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
+      const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-    document.getElementById('addToCart').addEventListener('click', () => {
-      const unitName = document.getElementById('unit').value;
-      const date = document.getElementById('date').value;
-      if (!unitName || !date) return alert('Please select both a unit and a date.');
+      // Load Units into Custom Dropdown
+      async function loadUnits() {
+        const { data, error } = await supabase.from('units').select('id, name, thumbnail_url');
+        if (error) {
+          console.error('Error loading units:', error);
+          return;
+        }
 
-      if (cart.some(item => item.unit === unitName && item.date === date)) {
-        alert('This unit and date are already in your cart.');
-        return;
+        const unitList = document.getElementById('unitList');
+        const unitDisplay = document.getElementById('unitDisplay');
+        const unitHidden = document.getElementById('unit');
+
+        data.forEach(unit => {
+          const div = document.createElement('div');
+          div.className = 'unit-option';
+          div.innerHTML = `
+            <img src="${unit.thumbnail_url}" alt="${unit.name}" />
+            <span>${unit.name}</span>
+          `;
+          div.addEventListener('click', () => {
+            unitDisplay.textContent = unit.name;
+            unitHidden.value = unit.name;
+            document.getElementById('unitDropdown').classList.remove('open');
+          });
+          unitList.appendChild(div);
+        });
+
+        unitDisplay.addEventListener('click', () => {
+          document.getElementById('unitDropdown').classList.toggle('open');
+        });
+
+        document.addEventListener('click', (e) => {
+          if (!document.getElementById('unitDropdown').contains(e.target)) {
+            document.getElementById('unitDropdown').classList.remove('open');
+          }
+        });
       }
 
-      cart.push({ unit: unitName, date });
+      await loadUnits();
 
-      const li = document.createElement('li');
-      li.className = 'list-group-item d-flex justify-content-between align-items-center';
-      li.textContent = `${unitName} on ${date}`;
-      const removeBtn = document.createElement('button');
-      removeBtn.className = 'btn btn-sm btn-danger';
-      removeBtn.textContent = 'Remove';
-      removeBtn.onclick = () => {
-        cart.splice(cart.indexOf(cart.find(i => i.unit === unitName && i.date === date)), 1);
-        cartList.removeChild(li);
-        if (cart.length === 0) submitCartBtn.style.display = 'none';
-      };
-      li.appendChild(removeBtn);
-      cartList.appendChild(li);
-      submitCartBtn.style.display = 'block';
+      // Handle Booking Form Submission
+      document.getElementById('bookingForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
 
-      unitDisplay.textContent = 'Select a unit';
-      document.getElementById('unit').value = '';
-      document.getElementById('date').value = '';
-    });
+        const name = document.getElementById('name').value.trim();
+        const phone = document.getElementById('phone').value.trim();
+        const email = document.getElementById('email').value.trim();
+        const address = document.getElementById('address').value.trim();
+        const unitName = document.getElementById('unit').value;
+        const date = document.getElementById('date').value;
 
-    submitCartBtn.addEventListener('click', async () => {
-      const name = document.getElementById('name').value.trim();
-      const phone = document.getElementById('phone').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const address = document.getElementById('address').value.trim();
-
-      if (!name || !phone || !email || !address) {
-        alert('Please fill out your contact info before submitting.');
-        return;
-      }
-
-      let errors = false;
-
-      for (const item of cart) {
-        const { data: unitData } = await supabase
+        // Lookup unit ID by name
+        const { data: unitData, error: unitError } = await supabase
           .from('units')
           .select('id')
-          .eq('name', item.unit)
+          .eq('name', unitName)
           .single();
 
-        if (!unitData) {
-          alert(`Unit not found: ${item.unit}`);
-          errors = true;
-          continue;
+        if (unitError || !unitData) {
+          alert('Error finding unit ID for "' + unitName + '"');
+          return;
         }
 
         const unitId = unitData.id;
-        const { data: existing } = await supabase
+
+        // Check for existing booking
+        const { data: existing, error: checkError } = await supabase
           .from('bookings')
           .select('*')
           .eq('unit', unitId)
-          .eq('date', item.date);
+          .eq('date', date);
 
         if (existing && existing.length > 0) {
-          errors = true;
-          continue;
+          document.getElementById('errorMessage').style.display = 'block';
+          document.getElementById('successMessage').style.display = 'none';
+          return;
         }
 
-        await supabase.from('bookings').insert([
-          { name, phone, email, address, unit: unitId, date: item.date }
+        // Insert booking
+        const { error: insertError } = await supabase.from('bookings').insert([
+          { name, phone, email, address, unit: unitId, date }
         ]);
 
-        const params = { name, phone, email, address, unit: item.unit, date: item.date };
-        emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
-        emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
-      }
+        if (insertError) {
+          const isDuplicate = insertError.message.includes('unique_unit_per_day');
+          const message = isDuplicate
+            ? 'We apologize this unit has been reserved already.'
+            : 'An error occurred while booking. Please try again.';
+          alert(message);
+        } else {
+          // Send confirmation emails
+          const params = { name, phone, email, address, unit: unitName, date };
 
-      document.getElementById(errors ? 'errorMessage' : 'successMessage').style.display = 'block';
-      cart.length = 0;
-      cartList.innerHTML = '';
-      submitCartBtn.style.display = 'none';
-      document.getElementById('bookingForm').reset();
+          emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
+          emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
+
+          document.getElementById('successMessage').style.display = 'block';
+          document.getElementById('errorMessage').style.display = 'none';
+          document.getElementById('bookingForm').reset();
+          document.getElementById('unitDisplay').textContent = 'Select a unit';
+        }
+      });
     });
   </script>
 </body>
