--- a/index.html
+++ b/index.html
@@ -102,11 +102,10 @@
       <input type="hidden" id="unit" required />
 
       <input type="date" id="date" class="form-control mb-3" required />
-      
-      <!-- Add to Cart Button -->
+
+      <!-- ✅ Added Add to Cart Button -->
       <button type="button" id="addToCartBtn" class="btn btn-secondary w-100 mb-2">Add to Cart</button>
 
-      <!-- Reserve Button -->
       <button type="submit" class="btn btn-primary w-100">Reserve</button>
     </form>
 
@@ -115,6 +114,12 @@
     </div>
     <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
       That unit is already booked on this date.
+    </div>
+
+    <!-- ✅ Cart Section -->
+    <div class="mt-4 text-start" id="cartSection" style="display: none;">
+      <h5>Cart</h5>
+      <ul class="list-group" id="cartList"></ul>
     </div>
   </div>
 
@@ -191,6 +196,27 @@
       }
 
       await loadUnits();
+
+      // ✅ Add to Cart Functionality
+      const cart = [];
+      document.getElementById('addToCartBtn').addEventListener('click', () => {
+        const unitName = document.getElementById('unit').value;
+        if (!unitName) {
+          alert('Please select a unit before adding to cart.');
+          return;
+        }
+
+        cart.push(unitName);
+
+        const cartSection = document.getElementById('cartSection');
+        const cartList = document.getElementById('cartList');
+        cartSection.style.display = 'block';
+
+        const li = document.createElement('li');
+        li.className = 'list-group-item';
+        li.textContent = unitName;
+        cartList.appendChild(li);
+      });
 
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
