--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -102,9 +102,6 @@
       <input type="hidden" id="unit" required />
 
       <input type="date" id="date" class="form-control mb-3" required />
-
-      <button type="button" id="addToCartBtn" class="btn btn-secondary w-100 mb-2">Add to Cart</button>
-
       <button type="submit" class="btn btn-primary w-100">Reserve</button>
     </form>
 
@@ -114,14 +111,12 @@
     <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
       That unit is already booked on this date.
     </div>
-
-    <div class="mt-4 text-start" id="cartSection" style="display: none;">
-      <h5>Cart</h5>
-      <ul class="list-group" id="cartList"></ul>
-    </div>
   </div>
 
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
     (function () {
@@ -137,10 +132,12 @@
       const allowedEnd = new Date(`${currentYear}-12-31`);
       const dateInput = document.getElementById('date');
 
+      // Set min date to today or Jan 1st of current year, whichever is later
       const minDate = today > allowedStart ? today : allowedStart;
       dateInput.setAttribute('min', minDate.toISOString().split('T')[0]);
       dateInput.setAttribute('max', allowedEnd.toISOString().split('T')[0]);
 
+      // Prevent next year selection
       dateInput.addEventListener('change', () => {
         const selected = new Date(dateInput.value);
         if (selected.getFullYear() !== currentYear) {
@@ -153,6 +150,7 @@
       const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
       const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
+      // Load Units into Custom Dropdown
       async function loadUnits() {
         const { data, error } = await supabase.from('units').select('id, name, thumbnail_url');
         if (error) {
@@ -192,48 +190,7 @@
 
       await loadUnits();
 
-      const cart = [];
-      document.getElementById('addToCartBtn').addEventListener('click', () => {
-        const unitName = document.getElementById('unit').value;
-        const date = document.getElementById('date').value;
-
-        if (!unitName || !date) {
-          alert('Please select a unit and a date before adding to cart.');
-          return;
-        }
-
-        const isDuplicate = cart.some(item => item.unitName === unitName && item.date === date);
-        if (isDuplicate) {
-          alert('This unit and date combination is already in your cart.');
-          return;
-        }
-
-        const cartItem = { unitName, date };
-        cart.push(cartItem);
-
-        const cartSection = document.getElementById('cartSection');
-        const cartList = document.getElementById('cartList');
-        cartSection.style.display = 'block';
-
-        const li = document.createElement('li');
-        li.className = 'list-group-item d-flex justify-content-between align-items-center';
-        li.innerHTML = `
-          ${unitName} — ${date}
-          <button class="btn btn-sm btn-danger">x</button>
-        `;
-
-        li.querySelector('button').addEventListener('click', () => {
-          const index = cart.findIndex(item => item.unitName === unitName && item.date === date);
-          if (index !== -1) cart.splice(index, 1);
-          li.remove();
-          if (cart.length === 0) {
-            cartSection.style.display = 'none';
-          }
-        });
-
-        cartList.appendChild(li);
-      });
-
+      // Handle Booking Form Submission
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -244,6 +201,7 @@
         const unitName = document.getElementById('unit').value;
         const date = document.getElementById('date').value;
 
+        // Lookup unit ID by name
         const { data: unitData, error: unitError } = await supabase
           .from('units')
           .select('id')
@@ -257,6 +215,7 @@
 
         const unitId = unitData.id;
 
+        // Check for existing booking
         const { data: existing, error: checkError } = await supabase
           .from('bookings')
           .select('*')
@@ -269,6 +228,7 @@
           return;
         }
 
+        // Insert booking
         const { error: insertError } = await supabase.from('bookings').insert([
           { name, phone, email, address, unit: unitId, date }
         ]);
@@ -280,6 +240,7 @@
             : 'An error occurred while booking. Please try again.';
           alert(message);
         } else {
+          // Send confirmation emails
           const params = { name, phone, email, address, unit: unitName, date };
 
           emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
