--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
     <div id="successMessage" class="mt-3 text-success" style="display:none;">
       Booking successful!
+      Email Sent!
     </div>
     <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
       That unit is already booked on this date.
