--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
     </form>
 
     <div id="successMessage" class="mt-3 text-success" style="display:none;">
-      Booking successful!
-      Email Sent!
+      Booking successful!<br>Email Sent!
     </div>
     <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
       That unit is already booked on this date.
