--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
         const phone = document.getElementById('phone').value.trim();
         const email = document.getElementById('email').value.trim();
         const address = document.getElementById('address').value.trim();
+        const address = document.getElementById('city').value.trim();
 
         if (cart.length === 0) {
           alert('Your cart is empty. Please add at least one booking.');
@@ -267,13 +268,13 @@
           }
 
           const { error: insertError } = await supabase.from('bookings').insert([
-            { name, phone, email, address, unit: unitId, date }
+            { name, phone, email, address, city, unit: unitId, date }
           ]);
 
           if (insertError) {
             allSuccessful = false;
           } else {
-            const params = { name, phone, email, address, unit: unitName, date };
+            const params = { name, phone, email, address, city, unit: unitName, date };
             emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
             emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
           }
