--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         const phone = document.getElementById('phone').value.trim();
         const email = document.getElementById('email').value.trim();
         const address = document.getElementById('address').value.trim();
-        const address = document.getElementById('city').value.trim();
+        const city = document.getElementById('city').value.trim();
 
         if (cart.length === 0) {
           alert('Your cart is empty. Please add at least one booking.');
