--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
       <input type="email" id="email" class="form-control mb-2" placeholder="Email Address" required />
       <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
-      <input type="text" id="city" class="form-control mb-2" placeholder="city" required />
+      <input type="text" id="city" class="form-control mb-2" placeholder="City" required />
 
       <div class="unit-dropdown" id="unitDropdown">
         <div id="unitDisplay">Select a unit</div>
